@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: ac_bootlog.m4,v 1.1 2005-06-13 23:05:54 achu Exp $
+## $Id: ac_bootlog.m4,v 1.2 2005-06-14 23:01:49 achu Exp $
 ##*****************************************************************************
 
 AC_DEFUN([AC_BOOTLOG],
@@ -20,14 +20,15 @@ AC_DEFUN([AC_BOOTLOG],
   # module
   if test "$ac_with_static_modules" != "yes" && 
      test "$ac_bootlog_test" = "yes"; then
-     AC_CHECK_LIB([qsql], [qsql_init], [ac_bootlog_have_qsql=yes], [])
      AC_CHECK_LIB([dl], [dlopen], [ac_bootlog_have_dl=yes], [])
+     if test "$ac_bootlog_have_dl" = "yes"; then
+        AC_CHECK_LIB([qsql], [qsql_init], [ac_bootlog_have_qsql=yes], [], [-ldl])
+     fi
   fi
 
-  if test "$ac_bootlog_have_qsql" = "yes" && 
-     test "$ac_bootlog_have_dl" = "yes"; then
-     AC_DEFINE([WITH_BOOTLOG], [1], [Define if you have bootlog.])
-     BOOTLOG_LIBS="-ldl"
+  if test "$ac_bootlog_have_qsql" = "yes"; then
+     AC_DEFINE([WITH_BOOTLOG], [1], [Define if you want to build bootlog.])
+     BOOTLOG_LIBS="-lqsql -ldl"
      MANPAGE_BOOTLOG=1
      ac_with_bootlog=yes
   else 
